--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
     "@types/express": "^5.0.0",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.7.2"
   }
 }
